--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Under Construction</title>
+  <title>t.g.n.::oil</title>
   <style>
     body {
       background: #f4f4f4;
@@ -21,7 +21,10 @@
   </style>
 </head>
 <body>
-  <h1>🚧 Under Construction 🚧</h1>
-  <p>This site is being built. Please check back soon!</p>
+  <h1>t.g.n.::oil</h1>
+  <a href="t4h.pdf">The Four Humours</a>
+  <a href="https://tgnoil.github.io/enochian-chess/">Enochian Chess</a>
+  <a href="20251205_thtete_isoof.mp3">The Hand, The Ear, The Eye - I.S.O.O.F.</a>
+
 </body>
 </html>
