--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
 </head>
 <body>
   <h1>t.g.n.::oil</h1>
-  <a href="t4h.pdf">The Four Humours</a>
-  <a href="https://tgnoil.github.io/enochian-chess/">Enochian Chess</a>
-  <a href="20251205_thtete_isoof.mp3">The Hand, The Ear, The Eye - I.S.O.O.F.</a>
+  <a href="t4h.pdf">The Four Humours</a><br>
+  <a href="https://tgnoil.github.io/enochian-chess/">Enochian Chess</a><br>
+  <a href="20251205_thtete_isoof.mp3">The Hand, The Ear, The Eye - I.S.O.O.F.</a><br>
 
 </body>
 </html>
+
