--- a/index.html
+++ b/index.html
@@ -24,12 +24,13 @@
   <h1>t.g.n.::oil</h1>
   <a href="music/20251210_eyedew_th33v1z10n.mp4">eyedew - th33v1z10n</a> 
   * <a href="music/20251205_thtete_isoof.mp3">The Hand, The Ear, The Eye - I.S.O.O.F.</a> 
-  * <a href="t4h.pdf">The Four Humours</a><br>
-  * <a href="https://tgnoil.github.io/enochian-chess/">Enochian Chess</a><br>
+  * <a href="t4h.pdf">The Four Humours</a>
+  * <a href="https://tgnoil.github.io/enochian-chess/">Enochian Chess</a>
   
 
 </body>
 </html>
+
 
 
 
