--- a/index.html
+++ b/index.html
@@ -4,32 +4,41 @@
   <meta charset="UTF-8">
   <title>t.g.n.::oil</title>
   <style>
-    body {
-      background: #f4f4f4;
-      font-family: Arial, sans-serif;
-      text-align: center;
-      padding-top: 15%;
-      color: #333;
-    }
-    h1 {
-      font-size: 3rem;
-    }
-    p {
-      font-size: 1.3rem;
-      margin-top: 10px;
-    }
+  body {
+    background: #f4f4f4;
+    font-family: Arial, sans-serif;
+    text-align: center;
+    padding-top: 15%;
+    color: #333;
+  }
+
+  .container {
+    max-width: 500px;    /* limit width */
+    margin: 0 auto;      /* center horizontally */
+    text-align: left;    /* optional: left-align text inside */
+  }
+
+  h1 {
+    font-size: 3rem;
+    text-align: center;  /* re-center the title */
+  }
+
+  p, a {
+    font-size: 1.3rem;
+  }
   </style>
 </head>
 <body>
-  <h1>t.g.n.::oil</h1>
-  <a href="music/20251210_eyedew_th33v1z10n.mp4">eyedew - th33v1z10n</a> 
-  * <a href="music/20251205_thtete_isoof.mp3">The Hand, The Ear, The Eye - I.S.O.O.F.</a> 
-  * <a href="pubs/t4h.pdf">The Four Humours</a>
-  * <a href="https://tgnoil.github.io/enochian-chess/">Enochian Chess</a>
-  
-
+  <div class="container">
+    <h1>t.g.n.::oil</h1>
+    <a href="music/20251210_eyedew_th33v1z10n.mp4">eyedew - th33v1z10n</a> 
+    * <a href="music/20251205_thtete_isoof.mp3">The Hand, The Ear, The Eye - I.S.O.O.F.</a> 
+    * <a href="pubs/t4h.pdf">The Four Humours</a>
+    * <a href="https://tgnoil.github.io/enochian-chess/">Enochian Chess</a>
+  </div>
 </body>
 </html>
+
 
 
 
