--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   .container {
     max-width: 500px;    /* limit width */
     margin: 0 auto;      /* center horizontally */
-    text-align: left;    /* optional: left-align text inside */
+    text-align: center;    /* optional: left-align text inside */
   }
 
   h1 {
@@ -38,6 +38,7 @@
   </div>
 </body>
 </html>
+
 
 
 
