--- a/index.html
+++ b/index.html
@@ -31,13 +31,23 @@
 <body>
   <div class="container">
     <h1>t.g.n.::oil</h1>
-    <a href="music/20251210_eyedew_th33v1z10n.mp4">eyedew - th33v1z10n</a> 
-    * <a href="music/20251205_thtete_isoof.mp3">The Hand, The Ear, The Eye - I.S.O.O.F.</a> 
+    <a href="music/20251210_th33v1z10n_EYEDEW.mp4">20251210_th33v1z10n_EYEDEW</a> 
+    // <a href="music/20251128_WHEED_hogland.mp4">20251128_WHEED_hogland</a> 
+    // <a href="music/20251128_FolkWorld_CrazyAndHappyAndBeautiful.mp4">20251128_FolkWorld_CrazyAndHappyAndBeautiful</a> 
+    // <a href="music/20251127_ISOOF_TheHandTheEarTheEye.mp4">20251127_ISOOF_TheHandTheEarTheEye</a> 
+    // <a href="music/20251105_th33v1z10n_EYEDEW_full.mp4">20251105_th33v1z10n_EYEDEW_full</a> 
+    // <a href="music/20251026_PeanutButterRascals_BeckoningFido.mp4">20251026_PeanutButterRascals_BeckoningFido</a> 
+    // <a href="music/20250611_SkipboNastyDaGoop_AintScurry2Me.mp4">20250611_SkipboNastyDaGoop_AintScurry2Me</a> 
+    // <a href="music/20250529_Phornikator_TremendouslyHighFrequency.mp4">20250529_Phornikator_TremendouslyHighFrequency</a> 
+    // <a href="music/20250527_BlueDogCollective.mp4">20250527_BlueDogCollective.mp4</a> 
+    // <a href="music/20250526_Abacus_MyForHer.mp4">20250526_Abacus_MyForHer.mp4</a> 
+    // <a href="music/20241109_ISOOF_TheMiserableDays.mp4">20241109_ISOOF_TheMiserableDays.mp4</a> 
     * <a href="https://tgnoil.github.io/enochian-chess/">Enochian Chess</a>
     * <a href="pubs/t4h.pdf">The Four Humours</a>
   </div>
 </body>
 </html>
+
 
 
 
