--- a/index.html
+++ b/index.html
@@ -31,22 +31,25 @@
 <body>
   <div class="container">
     <h1>t.g.n.::oil</h1>
-    <a href="music/20251210_th33v1z10n_EYEDEW.mp4">20251210_th33v1z10n_EYEDEW</a> 
-    // <a href="music/20251128_WHEED_hogland.mp4">20251128_WHEED_hogland</a> 
-    // <a href="music/20251128_FolkWorld_CrazyAndHappyAndBeautiful.mp4">20251128_FolkWorld_CrazyAndHappyAndBeautiful</a> 
+    music<br>
+    <a href="music/20251210_th33v1z10n_EYEDEW.mp4">20251210_th33v1z10n_EYEDEW.mp4</a> 
+    // <a href="music/20251128_WHEED_hogland.mp4">20251128_WHEED_hogland.mp4</a> 
+    // <a href="music/20251128_FolkWorld_CrazyAndHappyAndBeautiful.mp4">20251128_FolkWorld_CrazyAndHappyAndBeautiful.mp4</a> 
     // <a href="music/20251127_ISOOF_TheHandTheEarTheEye.mp4">20251127_ISOOF_TheHandTheEarTheEye</a> 
-    // <a href="music/20251105_th33v1z10n_EYEDEW_full.mp4">20251105_th33v1z10n_EYEDEW_full</a> 
-    // <a href="music/20251026_PeanutButterRascals_BeckoningFido.mp4">20251026_PeanutButterRascals_BeckoningFido</a> 
-    // <a href="music/20250611_SkipboNastyDaGoop_AintScurry2Me.mp4">20250611_SkipboNastyDaGoop_AintScurry2Me</a> 
-    // <a href="music/20250529_Phornikator_TremendouslyHighFrequency.mp4">20250529_Phornikator_TremendouslyHighFrequency</a> 
+    // <a href="music/20251105_th33v1z10n_EYEDEW_full.mp4">20251105_th33v1z10n_EYEDEW_full.mp4</a> 
+    // <a href="music/20251026_PeanutButterRascals_BeckoningFido.mp4">20251026_PeanutButterRascals_BeckoningFido.mp4</a> 
+    // <a href="music/20250611_SkipboNastyDaGoop_AintScurry2Me.mp4">20250611_SkipboNastyDaGoop_AintScurry2Me.mp4</a> 
+    // <a href="music/20250529_Phornikator_TremendouslyHighFrequency.mp4">20250529_Phornikator_TremendouslyHighFrequency.mp4</a> 
     // <a href="music/20250527_BlueDogCollective.mp4">20250527_BlueDogCollective.mp4</a> 
     // <a href="music/20250526_Abacus_MyForHer.mp4">20250526_Abacus_MyForHer.mp4</a> 
     // <a href="music/20241109_ISOOF_TheMiserableDays.mp4">20241109_ISOOF_TheMiserableDays.mp4</a> 
-    * <a href="https://tgnoil.github.io/enochian-chess/">Enochian Chess</a>
-    * <a href="pubs/t4h.pdf">The Four Humours</a>
+    other (more coming)<br>
+    <a href="https://tgnoil.github.io/enochian-chess/">Enochian Chess</a>
+    // <a href="pubs/t4h.pdf">The_Four_Humours.pdf</a>
   </div>
 </body>
 </html>
+
 
 
 
