--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <body>
   <div class="container">
     <h1>t.g.n.::oil</h1>
-    music:: 
+    music::<br> 
     <a href="music/20251210_th33v1z10n_EYEDEW.mp4">20251210_th33v1z10n_EYEDEW.mp4</a> 
     // <a href="music/20251128_WHEED_hogland.mp4">20251128_WHEED_hogland.mp4</a> 
     // <a href="music/20251128_FolkWorld_CrazyAndHappyAndBeautiful.mp4">20251128_FolkWorld_CrazyAndHappyAndBeautiful.mp4</a> 
@@ -44,18 +44,19 @@
     // <a href="music/20250526_Abacus_MyForHer.mp4">20250526_Abacus_MyForHer.mp4</a> 
     // <a href="music/20241109_ISOOF_TheMiserableDays.mp4">20241109_ISOOF_TheMiserableDays.mp4</a> //
     <br><br>
-    writing:: 
+    writing::<br>
     <a href="pubs/20250606_TheFourHumours.pdf">20250606_TheFourHumours.pdf</a> 
     // <a href="pubs/20250530_AGridThroughWhichLightComes.pdf">20250530_AGridThroughWhichLightComes.pdf</a> 
     // <a href="pubs/20241117_Apophasis.pdf">20241117_Apophasis.pdf</a> 
     // <a href="pubs/20241114_ToStemTheTideOfDays.pdf">20241114_ToStemTheTideOfDays.pdf</a> //
     <br><br>
-    games:: 
+    games::<br> 
     <a href="https://tgnoil.github.io/enochian-chess/">Enochian Chess</a>
     // <a href="https://github.com/tgnoil/hexadeck">hexadeck</a> //
   </div>
 </body>
 </html>
+
 
 
 
