--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
     <br><br><br>
 
     <div id="blog-viewer">
-  <div id="blog-box" style="border:2px solid #ccc; padding:10px; width:100%; max-width:600px; height:100px; overflow:auto; white-space:pre-wrap; font-family:monospace;"></div>
-  <div style="margin-top:10px; display:flex; gap:10px;">
+  <div id="blog-box" style="border:2px solid #ccc; padding:10px; width:100%; max-width:600px; height:100px; overflow:auto; white-space:pre-wrap; font-family:monospace; text-align: left;"></div>
+  <div style="margin-top:10px; display:flex; gap:10px; justify-content: center;">
     <button id="prev-btn">&lt; previous</button>
     <button id="next-btn">next &gt;</button>
   </div>
