--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
     <div id="blog-viewer">
   <div id="blog-box" style="border:2px solid #ccc; padding:10px; width:100%; max-width:600px; height:100px; overflow:auto; white-space:pre-wrap; font-family:monospace; text-align: left;"></div>
   <div style="margin-top:10px; display:flex; gap:10px; justify-content: center;">
-    <button id="prev-btn">&lt; previous</button>
-    <button id="next-btn">next &gt;</button>
+    <button id="prev-btn">&lt;</button>
+    <button id="next-btn">&gt;</button>
   </div>
 </div>
     
@@ -132,6 +132,7 @@ initBlogViewer();
   
 </body>
 </html>
+
 
 
 
