--- a/index.html
+++ b/index.html
@@ -42,17 +42,17 @@
     // <a href="music/20250529_Phornikator_TremendouslyHighFrequency.mp4">20250529_Phornikator_TremendouslyHighFrequency.mp4</a> 
     // <a href="music/20250527_BlueDogCollective.mp4">20250527_BlueDogCollective.mp4</a> 
     // <a href="music/20250526_Abacus_MyForHer.mp4">20250526_Abacus_MyForHer.mp4</a> 
-    // <a href="music/20241109_ISOOF_TheMiserableDays.mp4">20241109_ISOOF_TheMiserableDays.mp4</a> //
+    // <a href="music/20241109_ISOOF_TheMiserableDays.mp4">20241109_ISOOF_TheMiserableDays.mp4</a>
     <br><br>
     writing::<br>
     <a href="pubs/20250606_TheFourHumours.pdf">20250606_TheFourHumours.pdf</a> 
     // <a href="pubs/20250530_AGridThroughWhichLightComes.pdf">20250530_AGridThroughWhichLightComes.pdf</a> 
     // <a href="pubs/20241117_Apophasis.pdf">20241117_Apophasis.pdf</a> 
-    // <a href="pubs/20241114_ToStemTheTideOfDays.pdf">20241114_ToStemTheTideOfDays.pdf</a> //
+    // <a href="pubs/20241114_ToStemTheTideOfDays.pdf">20241114_ToStemTheTideOfDays.pdf</a>
     <br><br>
     games::<br> 
     <a href="https://tgnoil.github.io/enochian-chess/">Enochian Chess</a>
-    // <a href="https://github.com/tgnoil/hexadeck">hexadeck</a> //
+    // <a href="https://github.com/tgnoil/hexadeck">hexadeck</a>
 
     <br><br><br>
 
@@ -132,6 +132,7 @@ initBlogViewer();
   
 </body>
 </html>
+
 
 
 
