--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     games::<br> 
     <a href="https://tgnoil.github.io/enochian-chess/">Enochian Chess</a>
     // <a href="https://tgnoil.github.io/kcjfchess">KingCobraJFChess</a>
-    // <a href="https://github.com/tgnoil/hexadeck">hexadeck</a>
+    // <a href="https://tgnoil.github.io/hexadeck">hexadeck</a>
 
     <br><br><br>
 
@@ -146,6 +146,7 @@ initBlogViewer();
   
 </body>
 </html>
+
 
 
 
